--- a/#src/index.html
+++ b/#src/index.html
@@ -2,7 +2,14 @@
 <html lang="en">
 @@include('_head.html')
 <body>
-  <p>Hello</p>
+  @@include('_header.html')
+  <main class="main">
+   @@include('_story.html') 
+   @@include('_service.html')
+   @@include('_connection.html')
+  </main>   
+  @@include('_footer.html') 
+  
   <script src="js/script.js"></script>
 </body>
 </html>
